--- a/style.css
+++ b/style.css
@@ -13,13 +13,20 @@ body {
 
 h1 {
     text-decoration: overline underline;
+    color: green;
     font-size: 150%;
-
+    text-align: center;
 }
 
 h2 {
     text-decoration: overline underline;
     font-size: 1.2em;
+    text-align: center;
+}
+
+h3 {
+    color: green;
+    text-decoration: underline;
 }
 p.para1 {
     color: blue;
@@ -54,6 +61,7 @@ p.para4 {
 
 .imagec {
 display: block;
+text-align: center;
 margin-left: auto;
 margin-right: auto;
 padding: 3px;
@@ -61,4 +69,16 @@ background-color: silver;
 border-color: black;
     border-width: 2px;
     border-style: solid;
+}
+
+#divmain {
+    color: black;
+}
+
+#divbass {
+    color: black;
+}
+
+.highlight {
+    background-color: #ffff00;
 }
