--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ background-color: silver;
 border-color: black;
     border-width: 2px;
     border-style: solid;
+    width: 400px;
 }
 
 #divmain {
@@ -81,4 +82,20 @@ border-color: black;
 
 .highlight {
     background-color: #ffff00;
+}
+
+.divcontent {
+    color: black;
+}
+
+a:link {
+    color: blue;
+}
+
+a:visited {
+    color: grey;
+}
+
+a:hover {
+    color: #f15a51;
 }
